trabajando con JPA y manejando Exception

--- a/ClinicaOdontologica/src/main/resources/static/pacientes/get_pacientes.html
+++ b/ClinicaOdontologica/src/main/resources/static/pacientes/get_pacientes.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API Java-DH</title>
+    <title>Lista Pacientes</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../js/pacientes/get_pacientes.js"></script>
   </head>
   <body class="bg-gray-200">
     <nav class="bg-gray-950 p-4">
       <div class="container mx-auto flex justify-between items-center">
-        <a href="./index.html" class="text-white text-lg font-semibold">
+        <a href="../index.html" class="text-white text-lg font-semibold">
           API Clinica Odontologica
         </a>
         <ul class="flex space-x-8">
@@ -23,7 +24,7 @@
             >
               <li>
                 <a
-                  href="./odontologos/post_odontologos.html"
+                  href="../odontologos/post_odontologos.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Guardar
@@ -31,7 +32,7 @@
               </li>
               <li>
                 <a
-                  href="./odontologos/get_odontologos.html"
+                  href="../odontologos/get_odontologos.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Listar Odontologos
@@ -49,18 +50,10 @@
             >
               <li>
                 <a
-                  href="./pacientes/post_paciente.html"
+                  href="../pacientes/post_paciente.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Guardar
-                </a>
-              </li>
-              <li>
-                <a
-                  href="./pacientes/get_pacientes.html"
-                  class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
-                >
-                  Listar Pacientes
                 </a>
               </li>
             </ul>
@@ -76,7 +69,7 @@
             >
               <li>
                 <a
-                  href="./turnos/post_turno.html"
+                  href="../turnos/post_turno.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Guardar
@@ -84,7 +77,7 @@
               </li>
               <li>
                 <a
-                  href="./turnos/get_turno.html"
+                  href="../turnos/get_turno.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Listar Turnos
@@ -95,5 +88,38 @@
         </ul>
       </div>
     </nav>
+    <section>
+      <header class="flex justify-center">
+        <h1 class="text-3xl font-bold p-4">Lista de Pacientes</h1>
+      </header>
+      <div class="overflow-x-auto">
+        <table
+          id="tablaPacientes"
+          class="w-5/6 bg-white border border-gray-300 flex-wrap mx-auto"
+        >
+          <thead class="bg-blue-950 content-center text-white">
+            <tr>
+              <th class="py-2 px-4 border-b">ID</th>
+              <th class="py-2 px-4 border-b">Nombre</th>
+              <th class="py-2 px-4 border-b">Apellido</th>
+              <th class="py-2 px-4 border-b">Cédula</th>
+              <th class="py-2 px-4 border-b">Email</th>
+              <th class="py-2 px-4 border-b">Fecha Ingreso</th>
+              <th class="py-2 px-4 border-b">Calle</th>
+              <th class="py-2 px-4 border-b">Número</th>
+              <th class="py-2 px-4 border-b">Localidad</th>
+              <th class="py-2 px-4 border-b">Provincia</th>
+              <th class="py-2 px-4 border-b">Editar</th>
+              <th class="py-2 px-4 border-b">Eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Ejemplo de fila de datos -->
+
+            <!-- Añadir más filas según sea necesario -->
+          </tbody>
+        </table>
+      </div>
+    </section>
   </body>
 </html>
