--- a/ClinicaOdontologica/src/main/resources/static/odontologos/post_odontologos.html
+++ b/ClinicaOdontologica/src/main/resources/static/odontologos/post_odontologos.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API Java-DH</title>
+    <title>Guardar Odontologo</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-200">
     <nav class="bg-gray-950 p-4">
       <div class="container mx-auto flex justify-between items-center">
-        <a href="./index.html" class="text-white text-lg font-semibold">
+        <a href="../index.html" class="text-white text-lg font-semibold">
           API Clinica Odontologica
         </a>
         <ul class="flex space-x-8">
@@ -23,15 +23,7 @@
             >
               <li>
                 <a
-                  href="./odontologos/post_odontologos.html"
-                  class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
-                >
-                  Guardar
-                </a>
-              </li>
-              <li>
-                <a
-                  href="./odontologos/get_odontologos.html"
+                  href="../odontologos/get_odontologos.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Listar Odontologos
@@ -49,7 +41,7 @@
             >
               <li>
                 <a
-                  href="./pacientes/post_paciente.html"
+                  href="../pacientes/post_paciente.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Guardar
@@ -57,7 +49,7 @@
               </li>
               <li>
                 <a
-                  href="./pacientes/get_pacientes.html"
+                  href="../pacientes/get_pacientes.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Listar Pacientes
@@ -76,7 +68,7 @@
             >
               <li>
                 <a
-                  href="./turnos/post_turno.html"
+                  href="../turnos/post_turno.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Guardar
@@ -84,7 +76,7 @@
               </li>
               <li>
                 <a
-                  href="./turnos/get_turno.html"
+                  href="../turnos/get_turno.html"
                   class="block px-4 py-2 hover:bg-gray-100 rounded-lg"
                 >
                   Listar Turnos
@@ -95,5 +87,10 @@
         </ul>
       </div>
     </nav>
+    <section>
+      <header class="flex justify-center">
+        <h1 class="text-3xl font-bold p-4">Guardar Odontologo</h1>
+      </header>
+    </section>
   </body>
 </html>
