--- a/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
+++ b/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
@@ -11,6 +11,7 @@
     ></script>
   </head>
   <body class="bg-gray-200">
+    <!-- menu navegacion -->
     <nav class="bg-gray-950 p-4">
       <div class="container mx-auto flex justify-between items-center">
         <a href="../index.html" class="text-white text-lg font-semibold">
@@ -91,6 +92,7 @@
         </ul>
       </div>
     </nav>
+    <!-- fin menu navegacion -->
     <section>
       <header class="flex justify-center">
         <h1 id="h1" class="text-3xl font-bold p-4">Guardar Paciente</h1>
@@ -219,7 +221,7 @@
             type="submit"
             class="w-full bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
           >
-            Enviar
+            Guardar Paciente
           </button>
         </form>
       </div>
