--- a/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
+++ b/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-200">
-    <nav class="bg-gray-950 p-4">
+    <nav class="bg-gray-950 p-4 fixed top-0 left-0 w-full shadow-lg z-50">
       <div class="container mx-auto flex justify-between items-center">
         <a href="../index.html" class="text-white text-lg font-semibold">
           API Clinica Odontologica
@@ -88,7 +88,7 @@
       </div>
     </nav>
     <section>
-      <header class="flex justify-center">
+      <header class="flex justify-center mt-20">
         <h1 class="text-3xl font-bold p-4">Lista de Odontologos</h1>
       </header>
     </section>
