--- a/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
+++ b/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-gray-200">
     <!-- menu navegacion -->
-    <nav class="bg-gray-950 p-4">
+    <nav class="bg-gray-950 p-4 fixed top-0 left-0 w-full shadow-lg z-50">
       <div class="container mx-auto flex justify-between items-center">
         <a href="../index.html" class="text-white text-lg font-semibold">
           API Clinica Odontologica
@@ -94,7 +94,7 @@
     </nav>
     <!-- fin menu navegacion -->
     <section>
-      <header class="flex justify-center">
+      <header class="flex justify-center mt-20">
         <h1 id="h1" class="text-3xl font-bold p-4">Guardar Paciente</h1>
       </header>
       <div class="container mx-auto mt-1">
