agregando POST Odontologo

--- a/ClinicaOdontologica/src/main/resources/static/pacientes/get_pacientes.html
+++ b/ClinicaOdontologica/src/main/resources/static/pacientes/get_pacientes.html
@@ -92,7 +92,7 @@
     <!-- fin menu navegacion -->
     <section>
       <header class="flex justify-center mt-20">
-        <h1 class="text-3xl font-bold p-4">Lista de Pacientes</h1>
+        <h1 class="text-3xl font-bold p-4 text-blue-700">Lista de Pacientes</h1>
       </header>
       <div class="overflow-x-auto">
         <table
