--- a/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
+++ b/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
@@ -89,8 +89,112 @@
     </nav>
     <section>
       <header class="flex justify-center mt-20">
-        <h1 class="text-3xl font-bold p-4">Lista de Odontologos</h1>
+        <h1 class="text-3xl font-bold p-4 text-green-700">
+          Lista de Odontologos
+        </h1>
       </header>
+      <div class="overflow-x-auto">
+        <table
+          id="tablaPacientes"
+          class="w-5/6 bg-white border border-gray-300 flex-wrap mx-auto"
+        >
+          <thead class="bg-green-600 content-center text-white">
+            <tr>
+              <th class="py-2 px-4 border-b">ID</th>
+              <th class="py-2 px-4 border-b">Nombre</th>
+              <th class="py-2 px-4 border-b">Apellido</th>
+              <th class="py-2 px-4 border-b">Matricula</th>
+              <th class="py-2 px-4 border-b">Editar</th>
+              <th class="py-2 px-4 border-b">Eliminar</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+    <!-- Seccion para actualizar Datos de Odontologo -->
+    <section id="seccion_form" class="my-8 hidden">
+      <header class="flex justify-center">
+        <h2 class="text-2xl font-semibold">Actualizar Paciente</h2>
+      </header>
+      <div class="container mx-auto mt-1">
+        <form
+          id="actualizar_odontologo"
+          class="bg-white p-8 rounded-lg shadow-lg max-w-lg mx-auto"
+        >
+          <!-- Información Personal -->
+          <fieldset class="mb-6">
+            <legend class="text-xl font-semibold mb-4 text-gray-700">
+              Información Personal
+            </legend>
+
+            <label for="text-id" class="block mb-2 text-gray-700">ID</label>
+            <input
+              type="text"
+              id="text-id"
+              name="text-id"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none bg-gray-200 text-gray-800"
+              readonly
+            />
+
+            <label for="nombre" class="block mb-2 text-gray-700">Nombre</label>
+            <input
+              type="text"
+              id="nombre"
+              name="nombre"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Nombre"
+            />
+
+            <label for="apellido" class="block mt-4 mb-2 text-gray-700"
+              >Apellido</label
+            >
+            <input
+              type="text"
+              id="apellido"
+              name="apellido"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Apellido"
+            />
+
+            <label for="cedula" class="block mt-4 mb-2 text-gray-700"
+              >Matricula</label
+            >
+            <input
+              type="text"
+              id="matricula"
+              name="matricula"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="matricula"
+            />
+          </fieldset>
+          <!-- alerta formulario-->
+          <fieldset class="mb-6">
+            <div
+              id="alerta"
+              class="hidden my-auto py-8 rounded-lg gap-4"
+              role="alert"
+            ></div>
+          </fieldset>
+          <!-- Botón de Enviar y cancelar -->
+          <div class="flex justify-center gap-16">
+            <button
+              id="btn_actualizar"
+              type="submit"
+              class="w-full bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50"
+            >
+              Actualizar
+            </button>
+            <button
+              id="btn_cancelar"
+              type="button"
+              class="w-full bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50"
+            >
+              Cancelar
+            </button>
+          </div>
+        </form>
+      </div>
     </section>
   </body>
 </html>
