--- a/ClinicaOdontologica/src/main/resources/static/odontologos/post_odontologos.html
+++ b/ClinicaOdontologica/src/main/resources/static/odontologos/post_odontologos.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guardar Odontologo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      type="text/javascript"
+      src="../js/odontologos/post_odontologo.js"
+    ></script>
   </head>
   <body class="bg-gray-200">
     <nav class="bg-gray-950 p-4 fixed top-0 left-0 w-full shadow-lg z-50">
@@ -89,8 +93,71 @@
     </nav>
     <section>
       <header class="flex justify-center mt-20">
-        <h1 class="text-3xl font-bold p-4">Guardar Odontologo</h1>
+        <h1 id="h1" class="text-3xl font-bold p-4 text-green-700">
+          Guardar Odontologo
+        </h1>
       </header>
+      <div class="container mx-auto mt-1">
+        <form
+          id="agregarNuevoOdontologo"
+          class="bg-white p-8 rounded-lg shadow-lg max-w-lg mx-auto"
+        >
+          <!-- Información Personal -->
+          <fieldset class="mb-6">
+            <legend class="text-xl font-semibold mb-4 text-gray-700">
+              Información Personal
+            </legend>
+
+            <label for="nombre" class="block mb-2 text-gray-700">Nombre</label>
+            <input
+              type="text"
+              id="nombre"
+              name="nombre"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Nombre"
+              required
+            />
+
+            <label for="apellido" class="block mt-4 mb-2 text-gray-700"
+              >Apellido</label
+            >
+            <input
+              type="text"
+              id="apellido"
+              name="apellido"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Apellido"
+              required
+            />
+
+            <label for="matricula" class="block mt-4 mb-2 text-gray-700"
+              >Matricula</label
+            >
+            <input
+              type="text"
+              id="matricula"
+              name="matricula"
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="matricula"
+              required
+            />
+          </fieldset>
+          <fieldset class="mb-6">
+            <div
+              id="alerta"
+              class="hidden my-auto py-8 rounded-lg gap-4"
+              role="alert"
+            ></div>
+          </fieldset>
+          <!-- Botón de Enviar -->
+          <button
+            type="submit"
+            class="w-full bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50"
+          >
+            Guardar Odontologo
+          </button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
