--- a/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
+++ b/ClinicaOdontologica/src/main/resources/static/pacientes/post_paciente.html
@@ -95,7 +95,9 @@
     <!-- fin menu navegacion -->
     <section>
       <header class="flex justify-center mt-20">
-        <h1 id="h1" class="text-3xl font-bold p-4">Guardar Paciente</h1>
+        <h1 id="h1" class="text-3xl font-bold p-4 text-blue-600">
+          Guardar Paciente
+        </h1>
       </header>
       <div class="container mx-auto mt-1">
         <form
