agregando vistas de odontologo y spring security

--- a/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
+++ b/ClinicaOdontologica/src/main/resources/static/odontologos/get_odontologos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista Odontologo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../js/odontologos/get_odontologo.js"></script>
   </head>
   <body class="bg-gray-200">
     <nav class="bg-gray-950 p-4 fixed top-0 left-0 w-full shadow-lg z-50">
@@ -108,7 +109,7 @@
               <th class="py-2 px-4 border-b">Eliminar</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody id="tBodyOdontologos"></tbody>
         </table>
       </div>
     </section>
